@startuml

top to bottom direction

class mastermind.MastermindStarter {
    + play(): void
    + {static} main(): void
}
mastermind.MastermindStarter *--> mastermind.controllers.Logic
mastermind.MastermindStarter ..> mastermind.controllers.Controller

class mastermind.views.ColorView {
    ~ write(): void
}
mastermind.utils.WithConsoleView <|--- mastermind.views.ColorView

class mastermind.views.SecretCombinationView {
    + writeln(int): void
}
mastermind.utils.WithConsoleView <|--- mastermind.views.SecretCombinationView
mastermind.views.SecretCombinationView ..> mastermind.views.MessageView

class mastermind.views.ProposedCombinationView {
    + write(list) : void
}
mastermind.utils.WithConsoleView <|-- mastermind.views.ProposedCombinationView
mastermind.views.ProposedCombinationView ..> mastermind.views.ColorView
mastermind.views.ProposedCombinationView ..> mastermind.models.Color

class mastermind.views.ProposalView {
    + writeAttempts(int) : void
    + writeWinner() : void
    + writeLooser() : void
    + writeTitle() : void
    + readProposal() : String
    + writeLineBreak() : void
}
mastermind.utils.WithConsoleView <|-- mastermind.views.ProposalView
mastermind.views.ProposalView ..> mastermind.views.MessageView

class mastermind.views.ResultView {
    + writeln(int, int): void
}
mastermind.utils.WithConsoleView <|-- mastermind.views.ResultView
mastermind.views.ResultView ..> mastermind.views.MessageView

class mastermind.views.ResumeView {
    + read() : boolean
}
mastermind.utils.WithConsoleView <|-- mastermind.views.ResumeView
mastermind.views.ResumeView ..> mastermind.utils.YesNoDialog
mastermind.views.ResumeView ..> mastermind.views.MessageView

class mastermind.views.StartView {
    + writeln(): void
}
mastermind.utils.WithConsoleView <|-- mastermind.views.StartView
mastermind.views.StartView ..> mastermind.views.MessageView


enum mastermind.views.MessageView {
    + ATTEMPTS
   	+ SECRET
   	+ RESUME
   	+ RESULT
   	+ PROPOSED_COMBINATION
   	+ TITLE
   	+ WINNER
   	+ LOOSER
    - message: String
    - MessageView(String)
}


abstract class mastermind.controllers.Controller {
    - state : State
    # game : Mastermind
    # reset() : void
    # next() : void
    + {abstract} control() : void
}

class mastermind.controllers.ProposalController {
    ~ ProposalController(Mastermind, State)
    + control() : void
}
mastermind.controllers.Controller <|-- mastermind.controllers.ProposalController
mastermind.controllers.ProposalController *--> mastermind.views.ProposalView
mastermind.controllers.ProposalController ---> mastermind.models.Mastermind
mastermind.controllers.ProposalController ---> mastermind.models.State
mastermind.controllers.ProposalController ..> mastermind.models.ProposedCombination
mastermind.controllers.ProposalController ..> mastermind.views.ErrorView
mastermind.controllers.ProposalController ..> mastermind.views.ResultView
mastermind.controllers.ProposalController ..> mastermind.views.ProposedCombinationView

class mastermind.controllers.ResumeController {
    ~ ProposalController(Mastermind, State)
    + control() : void
}
mastermind.controllers.Controller <|-- mastermind.controllers.ResumeController
mastermind.controllers.ResumeController ..> mastermind.views.ResumeView

class mastermind.controllers.StartController {
    ~ StartController(Mastermind, State)
    + control() : void
}
mastermind.controllers.Controller <|-- mastermind.controllers.StartController
mastermind.controllers.StartController ..> mastermind.views.StartView
mastermind.controllers.StartController ..> mastermind.views.SecretCombinationView

class mastermind.controllers.Logic {
    - game: Mastermind
    - state: State
    - controllers: Map<StateValue, Controller>
    # Logic()
    + getController(): Controller
}
mastermind.controllers.Logic *--> mastermind.controllers.StartController
mastermind.controllers.Logic *--> mastermind.controllers.ProposalController
mastermind.controllers.Logic *--> mastermind.controllers.ResumeController
mastermind.controllers.Logic *--> mastermind.models.Mastermind
mastermind.controllers.Logic *--> mastermind.models.State

@enduml